@@ -1177,7 +1177,29 @@ new Test.Unit.Runner({
       this.assertIdentical(100, $('getDimensionsBox'+num).down('.deepest').getDimensions().width);
     }, this);
   },
-      
+  
+  testElementClonePosition: function() {
+  
+    var position, target, left = 558, top = 8;
+    target = $('clonePositionTarget').clonePosition('clonePositionSource', {
+      offsetTop: 20,
+      offsetLeft: 30
+    });
+    
+    position = target.cumulativeOffset();
+    this.assertIdentical(top  + 20, position.top);
+    this.assertIdentical(left + 30, position.left);
+    
+    target = $('clonePositionTarget').clonePosition('clonePositionSource');
+    position = target.cumulativeOffset();
+    dimensions = target.getDimensions();
+    
+    this.assertIdentical(top, position.top);
+    this.assertIdentical(left, position.left);
+    this.assertIdentical(20, dimensions.height);
+    this.assertIdentical(30, dimensions.width);
+  },
+  
   testDOMAttributesHavePrecedenceOverExtendedElementMethods: function() {
     this.assertNothingRaised(function() { $('dom_attribute_precedence').down('form') });
     this.assertEqual($('dom_attribute_precedence').down('input'), $('dom_attribute_precedence').down('form').update);
@@ -1334,6 +1356,11 @@ new Test.Unit.Runner({
     this.assertEnumEqual([0,0], offset);
     this.assertIdentical(0, offset.top);
     this.assertIdentical(0, offset.left);
+    
+    this.assertEnumEqual([10,10], $('absolute_fixed').viewportOffset());  
+    window.scrollTo(0,30);  
+    this.assertEnumEqual([10,10], $('absolute_fixed').viewportOffset());  
+    window.scrollTo(0,0);
   },
   
   testOffsetParent: function() {
