@@ -315,3 +315,6 @@
     </div>
   </div>
 </div>
+
+<div id='clonePositionSource'></div>
+<div id='clonePositionTarget'></div>
